kubernetes/kubevirt/base/egress-firewall.yaml
---
apiVersion: k8s.ovn.org/v1
kind: EgressFirewall
metadata:
  name: default
  namespace: kubevirt-hyperconverged
spec:
  egress:
    # Control Plane
    - type: Allow
      to:
        nodeSelector:
          matchLabels:
            node-role.kubernetes.io/control-plane: ""
    - type: Allow
      to:
        dnsName: quay.io
    - type: Allow
      to:
        dnsName: cdn.quay.io
    - type: Allow
      to:
        dnsName: cdn01.quay.io
    - type: Allow
      to:
        dnsName: cdn02.quay.io
    - type: Allow
      to:
        dnsName: cdn03.quay.io
    - type: Allow
      to:
        dnsName: cdn04.quay.io
    - type: Allow
      to:
        dnsName: cdn05.quay.io
    - type: Allow
      to:
        dnsName: cdn06.quay.io
    - type: Deny
      to:
        cidrSelector: 0.0.0.0/0
